attempt to fix css menu overflow

--- a/style.css
+++ b/style.css
@@ -81,4 +81,5 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
+    overflow-y:auto;
 }
